--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,8 +15,8 @@
   padding-top: 90px;
   font-weight: bold;
   font-size: 96px;
+  line-height: 104%;
   max-width: 793px;
-  line-height: 100px;
   margin: auto;
   text-align: center;
 }
@@ -24,7 +24,7 @@
 .header__description {
   padding-top: 32px;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 120%;
   max-width: 720px;
   margin: auto;
   text-align: center;
@@ -36,38 +36,9 @@
   max-width: 984px;
   margin: auto;
 }
-/* __subtitle
 
-position: absolute;
-width: 720px;
-height: 72px;
-left: 280px;
-top: 426px;
-
-font-family: "Inter";
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-/* or 120%
-text-align: center;
-
-color: #ffffff;*/
-
-/* __title */
-/*
-position: absolute;
-width: 793px;
-height: 200px;
-left: 243px;
-top: 194px;
-
-font-family: "Inter";
-font-style: normal;
-font-weight: 900;
-font-size: 96px;
-line-height: 100px;
-/* or 104%
-text-align: center;
-
-color: #ffffff;*/
+@media screen and (max-width: 1280px) {
+  .header__image {
+    width: 100%;
+  }
+}
