Corrección y aplicación de media queries

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,7 +7,14 @@
   margin: auto;
   max-width: 191px;
   font-size: 14px;
-  line-height: 16px;
-  /* identical to box height, or 114% */
+  line-height: 114%;
   text-align: right;
 }
+
+/*
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 32px 61px 24px;
+  }
+}
+*/
