--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -1,12 +1,18 @@
 .cover {
   padding: 46px 48px;
   display: flex;
-  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 1184px;
 }
 
-.cover__section {
-  margin: auto;
-  max-width: 1184px;
+.cover__content {
+  width: 1184px;
+  height: 740px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .cover__image {
@@ -20,8 +26,6 @@
 }
 
 .cover__text {
-  max-width: 656px;
-  margin: auto;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -32,8 +36,7 @@
   margin: 0;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
-  /* identical to box height, or 106% */
+  line-height: 106%;
   text-align: center;
   padding-bottom: 32px;
 }
@@ -41,31 +44,75 @@
 .cover__info {
   margin: 0;
   font-size: 18px;
-  line-height: 22px;
-  /* or 122% */
+  line-height: 122%;
   text-align: center;
 }
 
-.cover__info:last-of-type {
-  margin-bottom: 32px;
-}
-
 .cover__button {
+  margin: auto;
   margin-top: 32px;
   padding: 0;
   display: block;
-  margin: auto;
   width: 198px;
   height: 48px;
   font-weight: 600;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 122%;
   color: #ffffff;
   border-radius: 4px;
   border: 0;
   background-color: #0278fe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 
 .cover__button:hover {
   background-color: #0063d2;
+}
+
+.cover__button:hover ~ .cover__content {
+  opacity: 15%;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .cover {
+    padding: 46px 0px;
+    width: 768px;
+  }
+  .cover__content {
+    width: 100%;
+    height: 746px;
+  }
+  .cover__image {
+    opacity: 75%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    padding: 32px 0px;
+    width: auto;
+  }
+  .cover__content {
+    width: 100%;
+    height: 254px;
+  }
+
+  .cover__title {
+    font-size: 32px;
+    padding-bottom: 16px;
+  }
+
+  .cover__info {
+    font-size: 14px;
+  }
+
+  .cover__button {
+    margin-top: 16px;
+  }
+  .cover__image {
+    opacity: 75%;
+  }
 }
