--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -1,21 +1,47 @@
 .gallery {
   padding: 46px 48px;
+  display: flex;
+  justify-content: center;
+  width: 1184px;
 }
 
 .gallery__images {
-  margin: auto;
   max-width: 1184px;
-  max-height: calc(100vh - 92px);
-  display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(2, 50%);
+  display: flex;
+  flex-wrap: wrap;
   grid-gap: 16px;
 }
 
 .gallery__item {
   max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: 100%;
+  height: 213px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .gallery {
+    padding: 46px 24px;
+    width: 720px;
+  }
+
+  .gallery__item {
+    height: 264px;
+  }
+
+  .gallery__images {
+    width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .gallery {
+    padding: 46px 16px;
+    width: 288px;
+  }
+  .gallery__item {
+    height: 216px;
+  }
+  .gallery__images {
+    width: 288px;
+  }
 }
