--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,13 +1,15 @@
 .header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 34px 148px 46px;
+  width: 984px;
 }
 
 .logo {
   margin: auto;
   max-width: 270px;
-  height: 70px;
+  height: 100%;
 }
 
 .header__title {
@@ -31,14 +33,48 @@
 }
 
 .header__image {
-  margin: 0;
-  padding-top: 64px;
-  max-width: 984px;
   margin: auto;
+  padding-top: 64px;
+  width: 100%;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .header {
+    padding: 34px 0px 46px;
+    width: 768px;
+    margin: auto;
+  }
+
+  .header__title {
+    max-width: 720px;
+  }
+
   .header__image {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    width: auto;
+    padding: 34px 0px;
+  }
+
+  .logo {
+    max-width: 200px;
+  }
+
+  .header__title {
+    padding-top: 50px;
+    max-width: 288px;
+    font-size: 40px;
+  }
+  .header__description {
+    max-width: 288px;
+    font-size: 16px;
+  }
+  .header__image {
+    width: 100%;
+    padding-top: 40px;
   }
 }
