--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,11 +1,13 @@
 .intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 46px 115px 46px 148px;
+  width: 1017px;
 }
 
 .intro__content {
-  margin: 0;
   margin: auto;
-  max-width: 1017px;
 }
 
 .intro__title {
@@ -13,8 +15,7 @@
   max-width: 1017px;
   font-style: bold;
   font-size: 54px;
-  line-height: 58px;
-  /* or 107% */
+  line-height: 107%;
 }
 
 .intro__authortext {
@@ -23,8 +24,7 @@
   max-width: 722px;
   font-weight: 400;
   font-size: 24px;
-  line-height: 34px;
-  /* or 142% */
+  line-height: 142%;
   position: relative;
 }
 
@@ -39,5 +39,39 @@
   max-width: 720px;
   font-size: 16px;
   line-height: 163%;
-  /* or 26px */
+}
+
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+  .intro {
+    padding: 46px 24px;
+    width: 720px;
+  }
+  .intro__title {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    padding: 32px 0px;
+    width: 288px;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    max-width: 288px;
+  }
+  .intro__authortext,
+  .intro__authorname {
+    font-size: 24px;
+    max-width: 288px;
+  }
+
+  .intro__authorname {
+    bottom: -30px;
+  }
+
+  .intro__description {
+    max-width: 288px;
+  }
 }
