--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,12 +4,9 @@
   line-height: 20px;
   font-style: normal;
   font-weight: 400;
-  min-width: 1100px;
-  max-width: 1600px;
   color: #ffffff;
   background-color: #2a2c2f;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: auto;
+  justify-content: center;
 }
