Corrección final bloques cover e intro

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -13,7 +13,7 @@
 .intro__title {
   margin: 0;
   max-width: 1017px;
-  font-style: bold;
+  font-weight: bold;
   font-size: 54px;
   line-height: 107%;
 }
