--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -10,8 +10,6 @@
 .cover__content {
   width: 1184px;
   height: 740px;
-  justify-content: center;
-  align-items: center;
   position: relative;
 }
 
@@ -19,17 +17,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.cover__image:hover {
-  opacity: 15%;
-}
-
-.cover__text {
   position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
+  top: 0;
+  z-index: -1;
+}
+
+.cover__content:hover .cover__image {
+  opacity: 15%;
 }
 
 .cover__title {
@@ -39,6 +33,7 @@
   line-height: 106%;
   text-align: center;
   padding-bottom: 32px;
+  padding-top: 243px;
 }
 
 .cover__info {
@@ -71,7 +66,7 @@
   background-color: #0063d2;
 }
 
-.cover__button:hover ~ .cover__content {
+.cover__button:hover ~ .cover__image {
   opacity: 15%;
 }
 
@@ -95,13 +90,14 @@
     width: auto;
   }
   .cover__content {
-    width: 100%;
+    width: 321px;
     height: 254px;
   }
 
   .cover__title {
     font-size: 32px;
     padding-bottom: 16px;
+    padding-top: 46px;
   }
 
   .cover__info {
